--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,10 @@
         "use": "@vercel/node"
       }
     ],
-    "routes": [
+    "rewrites": [
       {
-        "src": "/(.*)",
-        "dest": "api/app.js"
+        "source": "/(.*)",
+        "destination": "api/app.js"
       }
     ],
     "headers": [
