ajuste da variável de url do banco.

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=your_database_url
+DATABASE_URL=postgresql://agendamento_owner:DHLw1h8eZgiR@ep-empty-credit-a5swlfu0.us-east-2.aws.neon.tech/agendamento?sslmode=require
