--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://agendamento_owner:DHLw1h8eZgiR@ep-empty-credit-a5swlfu0.us-east-2.aws.neon.tech/agendamento?sslmode=require
+POSTGRES_URL= "postgresql://conect-beauty_owner:u82FbeRfJaly@ep-gentle-snow-a5x50fr1.us-east-2.aws.neon.tech/conect-beauty?sslmode=require"
