pequenas alterações grandes mudanças!

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-POSTGRES_URL= "postgresql://conect-beauty_owner:u82FbeRfJaly@ep-gentle-snow-a5x50fr1.us-east-2.aws.neon.tech/conect-beauty?sslmode=require"
+POSTGRES_URL= "postgresql://conect-beauty_owner:u82FbeRfJaly@ep-gentle-snow-a5x50fr1-pooler.us-east-2.aws.neon.tech/conect-beauty?sslmode=require"
