pequenas alterações grandes mudanças! pt.2

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-POSTGRES_URL= "postgresql://conect-beauty_owner:u82FbeRfJaly@ep-gentle-snow-a5x50fr1-pooler.us-east-2.aws.neon.tech/conect-beauty?sslmode=require"
+POSTGRES_URL="postgres://default:xGO7Uf5oKbXa@ep-hidden-truth-a4dmmnpm-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:xGO7Uf5oKbXa@ep-hidden-truth-a4dmmnpm-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:xGO7Uf5oKbXa@ep-hidden-truth-a4dmmnpm-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:xGO7Uf5oKbXa@ep-hidden-truth-a4dmmnpm.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-hidden-truth-a4dmmnpm-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="xGO7Uf5oKbXa"
+POSTGRES_DATABASE="verceldb"
