--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-hidden-truth-a4dmmnpm-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="xGO7Uf5oKbXa"
 POSTGRES_DATABASE="verceldb"
+ACESS_TOKEN_SECRET="lVvlmCZ2fgbsprcgJuZprDFTe4kxz1RxJTEzb0FAyvk="
